--- a/wm_what/templates/layout.html
+++ b/wm_what/templates/layout.html
@@ -2,7 +2,7 @@
 <title>{% block title %}{% endblock %} - Wm-what</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
-  <h1>Wikimedia WHAT?</h1>
+  <h1><a href="{{url_for('splash')}}">Wikimedia WHAT?</a></h1>
   <ul>
     {% if user %} 
       <li><span>{{ user }}</span>
