Add limit to the update input form text

--- a/wm_what/templates/term.html
+++ b/wm_what/templates/term.html
@@ -22,6 +22,7 @@
             type="text"
             id="content"
             name="content"
+            maxlength="256"
             value="{{definition.content}}"
           /><br />
           -- by {{definition.author}} (you)
