--- a/wm_what/templates/term.html
+++ b/wm_what/templates/term.html
@@ -9,7 +9,7 @@
     {% for definition in term.definitions %}
     <tr>
       <td>
-        {{definition.content}} -- by {{definition.author}}
+        {{definition.content | escape | markdown}} -- by {{definition.author}}
         {% if definition.author == user %}
         <form id="update_form" action="{{url_for('update_definition', definition_id=definition.id)}}" method="post">
           <input
